<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">XFran</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="workout_title">Workout title</string>
    <string name="workout_description">Workout description</string>
    <string name="workout_exercises">Workout exercises</string>
    <string name="result_date">Date</string>
    <string name="result_score">Score</string>
    <string name="result_scaling">Scaled the workout?</string>
    <string name="result_feel_score">How hard was it?</string>
    <string name="result_comments">Comments:</string>
    <string name="add_plan">Plan</string>
    <string name="add_result">Add Result</string>
    <string name="compare_result">View Results</string>
    <string name="time">Time:</string>
    <string name="reps">Num. of reps:</string>
    <string name="score_type">Time (mm:ss), rounds + reps (rds-reps) or max weight (lbs)</string>
    <string name="score">Score:</string>
    <string name="feel_score">How hard was it?</string>
    <string name="feel_comments">Comments:</string>
    <string name="scaled">Scaled?</string>
    <string name="garmin_connect">Sync Garmin activity:</string>
    <string name="cancel">Cancel</string>
    <string name="new_result">Add new result</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="time_hint">hh:mm</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="save">SAVE</string>
    <string name="close">CLOSE</string>
    <string name="export">export</string>
    <string name="newEventInApp">NEW EVENT</string>
    <string name="startTime">Start time</string>
    <string name="endTime">End time</string>
    <string name="date">Date</string>
    <string name="nameEvent">Name of the Event</string>
    <string name="newEvent">NEW EVENT</string>
    <string name="dateEvent_Hint">Add date</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_trainingdiary">Training Diary</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_profile_login">Login</string>
    <string name="menu_profile_profile">Profile</string>
    <string name="menu_profile_logout">Logout</string>
    <string name="description_temporary">temporary</string>
    <string name="logIn_title">Authenticator App</string>
    <string name="logIn_subtitle">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logIn_register">No account yet?\n Create new account</string>
    <string name="reg_subtitle">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="reg_login">Already Registered?\nLogin Here</string>
    <string name="profilepicture">ProfilePicture</string>
    <string name="profile_title">My Profile</string>
    <string name="test_name"> </string>
    <string name="testemail"> </string>
    <string name="testweight"> - </string>
    <string name="weight_description">Current\nWeight</string>
    <string name="test_length"> - </string>
    <string name="length_description">Current\nHeight</string>
    <string name="testheartrate"> - </string>
    <string name="heartrate_description">Current\n Heartrate range</string>
    <string name="testmeasurementdate"> - </string>
    <string name="measurement_description">Latest\nMeasurement</string>
    <string name="edit">edit</string>
    <string name="editprofile_title">Edit Profile</string>
    <string name="testpassword">testpassword</string>
    <string name="editProfile_firstname_hint">First Name</string>
    <string name="editProfile_lastname_hint">Last Name</string>
    <string name="editProfile_weight_hint">Weight [kg]</string>
    <string name="editProfile_height_hint">Height [cm]</string>
    <string name="nohint" />
    <string name="saveResult_date_hint">yyyy-mm-dd</string>
    <string name="garmin_description">add_garmin_result</string>
    <string name="score_amrap">Enter nº of rounds and reps (rds-reps)</string>
    <string name="score_for_time">Enter total time (mm:ss)</string>
    <string name="score_for_weight">Enter maximum weight (lbs)</string>
    <string name="score_emom">Enter n° of rounds FULLY completed</string>
    <string name="score_sets">Enter weight for each exercise (lbs) separated by -</string>
    <string name="score_amrap_hint">rds–reps</string>
    <string name="score_for_time_hint">mm:ss</string>
    <string name="score_for_weight_hint">0.0</string>
    <string name="score_emom_hint">rounds</string>
    <string name="score_sets_hint">weight 1 - weight 2 - …</string>
    <string name="wod">WOD</string>
    <string name="planned_today">Planned today</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="view_wod_results">WOD Results</string>
    <string name="workouts">Workouts</string>
    <string name="plan_workout">Plan Workout</string>
    <string name="calendar">Calendar</string>
    <string name="add">Add</string>
    <string name="results">Results</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="resulttab_1">Result List</string>
    <string name="resulttab_2">Statistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_event">Plan Workout</string>
    <string name="planEvent_dialogTitle">Plan your workout</string>
    <string name="savebutton">saveButton</string>
    <string name="myresults">"My Results"</string>
    <string name="statistics">Statistics</string>
</resources>