<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_results"
            android:icon="@drawable/ic_results"
            android:title="@string/results" />

        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add"
            android:title="@string/add"/>

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar_month"
            android:title="@string/calendar" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"/>

    </group>


</menu>