<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/black">

    <RelativeLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/item_expanded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_title"
            android:layout_alignStart="@id/item_title"
            android:layout_alignEnd="@id/item_title"
            android:orientation="vertical"
            android:padding="4dp">

            <Button
                android:id="@+id/button_plan_wod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_comments"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/add_plan" />

            <Button
                android:id="@+id/button_compare_wod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_comments"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@+id/button_plan_wod"
                android:text="@string/compare_result" />

            <TextView
                android:id="@+id/workout_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/workout_description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/workout_exercises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/workout_description"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/workout_exercises"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/result_scaling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/workout_exercises"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/result_scaling"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/result_feel_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_scaling"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/result_feel_score"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/result_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_feel_score"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/result_comments"
                android:textSize="16sp" />


        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/result_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/result_date"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@id/workout_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/workout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:maxWidth="120dp"
                android:text="@string/workout_title"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/result_score"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/workout_name"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.cardview.widget.CardView>